nuget/Microsoft.WSL.Containers/build/net/Microsoft.WSL.Containers.Interop.cs


        [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Unicode)]
        public static extern int WslcInitSessionSettings(
            [MarshalAs(UnmanagedType.LPWStr)] string name,
            [MarshalAs(UnmanagedType.LPWStr)] string storagePath,
            out WslcSessionSettings sessionSettings);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcCreateSession(
            ref WslcSessionSettings sessionSettings,
            out IntPtr session,
            out IntPtr errorMessage);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetSessionSettingsCpuCount(
            ref WslcSessionSettings sessionSettings,
            uint cpuCount);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetSessionSettingsMemory(
            ref WslcSessionSettings sessionSettings,
            uint memoryMb);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetSessionSettingsTimeout(
            ref WslcSessionSettings sessionSettings,
            uint timeoutMS);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetSessionSettingsVhd(
            ref WslcSessionSettings sessionSettings,
            ref WslcVhdRequirements vhdRequirements);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall, EntryPoint = "WslcSetSessionSettingsVhd")]
        public static extern int WslcSetSessionSettingsVhd(
            ref WslcSessionSettings sessionSettings,
            IntPtr vhdRequirements);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetSessionSettingsFeatureFlags(
            ref WslcSessionSettings sessionSettings,
            WslcSessionFeatureFlags flags);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetSessionSettingsTerminationCallback(
            ref WslcSessionSettings sessionSettings,
            WslcSessionTerminationCallback terminationCallback,
            IntPtr terminationContext);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcTerminateSession(IntPtr session);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcReleaseSession(IntPtr session);

        // ----------------------------------------------------------------
        // Container
        // ----------------------------------------------------------------

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
        public static extern int WslcInitContainerSettings(
            [MarshalAs(UnmanagedType.LPStr)] string imageName,
            out WslcContainerSettings containerSettings);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcCreateContainer(
            IntPtr session,
            ref WslcContainerSettings containerSettings,
            out IntPtr container,
            out IntPtr errorMessage);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcStartContainer(
            IntPtr container,
            WslcContainerStartFlags flags,
            out IntPtr errorMessage);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
        public static extern int WslcSetContainerSettingsName(
            ref WslcContainerSettings containerSettings,
            [MarshalAs(UnmanagedType.LPStr)] string name);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetContainerSettingsInitProcess(
            ref WslcContainerSettings containerSettings,
            ref WslcProcessSettings initProcess);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetContainerSettingsNetworkingMode(
            ref WslcContainerSettings containerSettings,
            WslcContainerNetworkingMode networkingMode);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
        public static extern int WslcSetContainerSettingsHostName(
            ref WslcContainerSettings containerSettings,
            [MarshalAs(UnmanagedType.LPStr)] string hostName);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
        public static extern int WslcSetContainerSettingsDomainName(
            ref WslcContainerSettings containerSettings,
            [MarshalAs(UnmanagedType.LPStr)] string domainName);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetContainerSettingsFlags(
            ref WslcContainerSettings containerSettings,
            WslcContainerFlags flags);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetContainerSettingsPortMappings(
            ref WslcContainerSettings containerSettings,
            [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 2)] WslcContainerPortMapping[] portMappings,
            uint portMappingCount);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetContainerSettingsVolumes(
            ref WslcContainerSettings containerSettings,
            [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 2)] WslcContainerVolume[] volumes,
            uint volumeCount);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetContainerSettingsNamedVolumes(
            ref WslcContainerSettings containerSettings,
            [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 2)] WslcContainerNamedVolume[] namedVolumes,
            uint namedVolumeCount);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcCreateContainerProcess(
            IntPtr container,
            ref WslcProcessSettings newProcessSettings,
            out IntPtr newProcess,
            out IntPtr errorMessage);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcReleaseContainer(IntPtr container);

        // ----------------------------------------------------------------
        // Container management
        // ----------------------------------------------------------------

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
        public static extern int WslcGetContainerID(
            IntPtr container,
            [MarshalAs(UnmanagedType.LPArray, SizeConst = ContainerIdBufferSize)] byte[] containerId);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcGetContainerInitProcess(
            IntPtr container,
            out IntPtr initProcess);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcInspectContainer(
            IntPtr container,
            out IntPtr inspectData);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcGetContainerState(
            IntPtr container,
            out WslcContainerState state);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcStopContainer(
            IntPtr container,
            WslcSignal signal,
            uint timeoutSeconds,
            out IntPtr errorMessage);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcDeleteContainer(
            IntPtr container,
            WslcDeleteContainerFlags flags,
            out IntPtr errorMessage);

        // ----------------------------------------------------------------
        // Process
        // ----------------------------------------------------------------

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcInitProcessSettings(
            out WslcProcessSettings processSettings);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
        public static extern int WslcSetProcessSettingsCurrentDirectory(
            ref WslcProcessSettings processSettings,
            [MarshalAs(UnmanagedType.LPStr)] string currentDirectory);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetProcessSettingsCmdLine(
            ref WslcProcessSettings processSettings,
            [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)] string[] argv,
            UIntPtr argc);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetProcessSettingsEnvVariables(
            ref WslcProcessSettings processSettings,
            [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)] string[] keyValue,
            UIntPtr argc);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSetProcessSettingsCallbacks(
            ref WslcProcessSettings processSettings,
            ref WslcProcessCallbacks callbacks,
            IntPtr context);

        // ----------------------------------------------------------------
        // Process management
        // ----------------------------------------------------------------

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcGetProcessPid(
            IntPtr process,
            out uint pid);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcGetProcessExitEvent(
            IntPtr process,
            out IntPtr exitEvent);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcGetProcessState(
            IntPtr process,
            out WslcProcessState state);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcGetProcessExitCode(
            IntPtr process,
            out int exitCode);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcSignalProcess(
            IntPtr process,
            WslcSignal signal);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcGetProcessIOHandle(
            IntPtr process,
            WslcProcessIOHandle ioHandle,
            out IntPtr handle);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcReleaseProcess(IntPtr process);

        // ----------------------------------------------------------------
        // Image management
        // ----------------------------------------------------------------

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcPullSessionImage(
            IntPtr session,
            ref WslcPullImageOptions options,
            out IntPtr errorMessage);
